--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "torann/geoip",
+  "name": "motocard/laravel-geoip",
   "description": "Support for multiple GeoIP services.",
   "keywords": [
     "laravel",
@@ -19,19 +19,19 @@
   ],
   "require": {
     "php": "^8.0|^8.1",
-    "illuminate/cache": "^8.0|^9.0|^10.0",
-    "illuminate/console": "^8.0|^9.0|^10.0",
-    "illuminate/support": "^8.0|^9.0|^10.0"
+    "illuminate/cache": "^6.0|^7.0|^8.0|^9.0|^10.0",
+    "illuminate/console": "^6.0|^7.0|^8.0|^9.0|^10.0",
+    "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0"
   },
   "suggest": {
     "geoip2/geoip2": "Required to use the MaxMind database or web service with GeoIP (~2.1).",
     "monolog/monolog": "Allows for storing location not found errors to the log"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0|^9.0|^10.0",
-    "mockery/mockery": "^1.3",
+    "phpunit/phpunit": "^7.0|^8.0|^9.0|^10.0",
+    "mockery/mockery": "^0.9.4|^1.3",
     "geoip2/geoip2": "~2.1",
-    "vlucas/phpdotenv": "^5.0",
+    "vlucas/phpdotenv": "^3.5|^5.0",
     "phpstan/phpstan": "^0.12.14",
     "squizlabs/php_codesniffer": "^3.5"
   },
